Transmitters and Receivers, and recipes

--- a/src/main/resources/assets/analog/lang/en_us.json
+++ b/src/main/resources/assets/analog/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-	"item.analog.radio": "Radio"
+	"item.analog.radio": "Radio",
+	"block.analog.transmitter": "Transmitter",
+	"block.analog.receiver": "Receiver"
 }
