Radio static sound

--- a/src/main/resources/assets/analog/lang/en_us.json
+++ b/src/main/resources/assets/analog/lang/en_us.json
@@ -1,5 +1,6 @@
 {
 	"item.analog.radio": "Radio",
 	"block.analog.transmitter": "Transmitter",
-	"block.analog.receiver": "Receiver"
+	"block.analog.receiver": "Receiver",
+	"subtitles.analog.radio_static": "Radio static"
 }
