Prepare for release

--- a/src/main/resources/assets/analog/lang/en_us.json
+++ b/src/main/resources/assets/analog/lang/en_us.json
@@ -2,5 +2,6 @@
 	"item.analog.radio": "Radio",
 	"block.analog.transmitter": "Transmitter",
 	"block.analog.receiver": "Receiver",
-	"subtitles.analog.radio_static": "Radio static"
+	"subtitles.analog.radio_static": "Radio static",
+	"itemGroup.analog": "Analog"
 }
